# airflow-practice

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
dags/: customer_dag.py  sample_df_to_csv_dag.py  test_env_dag.py
pipelines/: __init__.py  df_to_csv.py
